# PixelSynC-

./: CMakeLists.txt  LICENSE  README.md  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  unitTests.cpp
